<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drink History</string>
    <string name="new_visit">New visit</string>
    <string name="new_drink">New drink</string>
    <string name="pub_name">Pub name</string>
    <string name="new_pub_save">Create new pub</string>
    <string name="save_edit_drink">Save drink</string>
    <string name="drink_name">Drink name</string>
    <string name="drink_price">Drink price</string>
    <string name="delete_drink">Delete drink</string>
    <string name="delete_drink_button">Delete!</string>
    <string name="delete_drink_warning">Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currency_text">,-Kč</string>
    <string name="edit_drink_dialog_name">Drink settings</string>
    <string name="finalPrice">Total price:</string>
    <string name="deleteBtn">Delete</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="wrong_drink_count">Wrong number of drinks!</string>
    <string name="empty_pub_name">&lt;nameless pub&gt;</string>

</resources>