<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/drinkName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drink_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/drinkPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drink_price"
        android:inputType="number" />


    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_drink" />

</LinearLayout>